testsuite/tests/name_resolution/xref_eq_string_literals/test.out
Analyzing teststrlit.adb
########################

Resolving xrefs for node <AssignStmt teststrlit.adb:13:4-13:15>
***************************************************************

Expr: <Id "S" teststrlit.adb:13:4-13:5>
  references:    <DefiningName "S" teststrlit.adb:6:4-6:5>
  type:          <ConcreteTypeDecl ["Str"] teststrlit.adb:4:4-4:36>
  expected type: None
Expr: <Str ""abc"" teststrlit.adb:13:9-13:14>
  references:    None
  type:          <ConcreteTypeDecl ["Str"] teststrlit.adb:4:4-4:36>
  expected type: <ConcreteTypeDecl ["Str"] teststrlit.adb:4:4-4:36>

Resolving xrefs for node <AssignStmt teststrlit.adb:16:4-16:15>
***************************************************************

teststrlit.adb:16:9: error: Int does not allow string literals
16 |    I := "abc";
   |         ^^^^^


Resolving xrefs for node <AssignStmt teststrlit.adb:19:4-19:21>
***************************************************************

Expr: <Id "I" teststrlit.adb:19:4-19:5>
  references:    <DefiningName "I" teststrlit.adb:7:4-7:5>
  type:          <ConcreteTypeDecl ["Int"] teststrlit.adb:3:4-3:31>
  expected type: None
Expr: <CallExpr teststrlit.adb:19:9-19:20>
  references:    <DefiningName "Foo" teststrlit.adb:9:13-9:16>
  type:          <ConcreteTypeDecl ["Int"] teststrlit.adb:3:4-3:31>
  expected type: <ConcreteTypeDecl ["Int"] teststrlit.adb:3:4-3:31>
Expr: <Id "Foo" teststrlit.adb:19:9-19:12>
  references:    <DefiningName "Foo" teststrlit.adb:9:13-9:16>
  type:          <ConcreteTypeDecl ["Int"] teststrlit.adb:3:4-3:31>
  expected type: None
Expr: <Str ""abc"" teststrlit.adb:19:14-19:19>
  references:    None
  type:          <ConcreteTypeDecl ["Str"] teststrlit.adb:4:4-4:36>
  expected type: <ConcreteTypeDecl ["Str"] teststrlit.adb:4:4-4:36>


Done.
